--- a/Site/Styles/section.css
+++ b/Site/Styles/section.css
@@ -117,36 +117,35 @@ section {
     justify-content: space-between;
 }
 
-.nome {
-    font-size: 1.2rem;
-}
-
-.pessoas {
-    margin: 1rem; 
-}
-
-.repiu, .replie, .like {
-    width: 1.5rem;
-}
-
-
-#Post1 {
+.post {
     width: 100%;
     border: 1px solid var(--cinza);
 }
 
-#Pessoa01 {
+.pessoa {
     display: flex;
     align-items: center;
     justify-content: space-between;
     border: 1px solid var(--cinza);
 }
 
-#Pessoa01 h2 {
+.pessoa h2 {
     margin-right: 30rem;
 }
 
-#Mensagem01 {
+.imagens img{
+    border: 1px solid var(--vermelho);
+    width: 6rem;
+    margin: 1rem; 
+    border-radius: 30%;
+}
+
+.arroba {
+    display: flex;
+    flex-direction: column;
+}
+
+.mensagem {
     width: 100%;
     height: 10rem;
     display: flex;
@@ -155,22 +154,31 @@ section {
     justify-content: space-between;
 }
 
-#Texto1 {
-    margin-top: 2rem;
-    margin-right: 35rem;
-}
-
-#arroba1 {
-    display: flex;
-    flex-direction: column;
-}
-
-#Reações {
+.reações {
     width: 15rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
     margin-right: 25rem;
+}
+
+.repiu, .replie, .like {
+    width: 1.5rem;
+}
+
+.nome {
+    font-size: 1.8rem;
+}
+
+.arroba0 {
+    font-size: 1.2rem;
+}
+
+.texto {
+    width: 80%;
+    margin-top: 2rem;
+    margin-right: 4rem;
+    font-size: 1.0rem;
 }
 
