--- a/Site/Styles/section.css
+++ b/Site/Styles/section.css
@@ -129,20 +129,21 @@ section {
     border: 1px solid var(--cinza);
 }
 
-.pessoa h2 {
-    margin-right: 30rem;
-}
-
 .imagens img{
     border: 1px solid var(--vermelho);
-    width: 6rem;
+    width: 5rem;
+    height: 4rem;
     margin: 1rem; 
     border-radius: 30%;
+    background-color: white;
+    background-image: url("../Site/Image/Header/Perfil.png");
 }
 
 .arroba {
     display: flex;
     flex-direction: column;
+    position: absolute;
+    left: 9.5rem;
 }
 
 .mensagem {
@@ -167,12 +168,13 @@ section {
     width: 1.5rem;
 }
 
-.nome {
-    font-size: 1.8rem;
+.nome h2 {
+    font-size: 1.5rem;
 }
 
 .arroba0 {
-    font-size: 1.2rem;
+    padding: 0.2rem;
+    font-size: 0.8rem;
 }
 
 .texto {
