--- a/Site/Styles/section.css
+++ b/Site/Styles/section.css
@@ -85,13 +85,13 @@ section {
 }
 
 #Escrever input{
-    width: 100%;
-    height: 80%;
+    width: 35rem;
+    height: 250rem;
     border: none; 
     font-size: 1rem;
     background-color: white; 
     outline: none;
-    margin-left: 2rem;
+    margin-left: 4rem;
     margin-bottom: 6rem;
 }
 
