--- a/Site/Styles/section.css
+++ b/Site/Styles/section.css
@@ -86,7 +86,7 @@ section {
 
 #Escrever input{
     width: 35rem;
-    height: 250rem;
+    height: 15rem;
     border: none; 
     font-size: 1rem;
     background-color: white; 
@@ -208,3 +208,11 @@ section {
     font-size: 1.0rem;
 }
 
+.contagem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    margin-right: 35rem;
+    margin-bottom: 1rem;
+}
